--- a/css/about.css
+++ b/css/about.css
@@ -1,69 +1,89 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f2f2f2;
-    max-width: 100%; /* Set maximum width for the body */
-    overflow-x: hidden; /* Hide horizontal scrollbar */
-  }
-  
-  nav {
-    background-color: #333;
-  }
-  
-  nav ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    text-align: center; /* Align the navigation items to the center */
-  }
-  
-  nav ul li {
-    display: inline-block; /* Display the list items horizontally */
-  }
-  
-  nav ul li a {
-    display: block;
-    color: white;
-    text-decoration: none;
-    padding: 10px 20px;
-  }
-  
-  nav ul li a:hover {
-    background-color: #555;
-  }
-  
-  .container {
-    max-width: 800px; /* Adjust this value as needed */
-    margin: 0 auto;
-    padding: 20px;
-  }
-  
-  .profile {
-    text-align: center;
-  }
-  
-  .profile img {
-    border-radius: 50%;
-    width: 200px;
-    height: 200px;
-    object-fit: cover;
-    margin-bottom: 20px;
-  }
-  
-  .profile h1 {
-    color: #333;
-  }
-  
-  .profile p {
-    color: #666;
-    line-height: 1.6;
-  }
-  
-  footer {
-    background-color: #333;
-    color: white;
-    text-align: center;
-    padding: 20px 0;
-  }
-  
+  font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f9f9f9;
+  color: #333;
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
+nav {
+  background-color: #ffb6c1;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  width: 100%;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+nav ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+}
+
+nav ul li {
+  display: inline-block;
+}
+
+nav ul li a {
+  display: block;
+  color: white;
+  text-decoration: none;
+  padding: 15px 20px;
+  transition: background-color 0.3s ease;
+}
+
+nav ul li a:hover {
+  background-color: #ff69b4;
+}
+
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #fff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+}
+
+.profile {
+  text-align: center;
+}
+
+.profile img {
+  border-radius: 50%;
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  margin-bottom: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border: 4px solid #ffb6c1;
+}
+
+.profile h1 {
+  color: #ff69b4;
+  font-weight: 600;
+}
+
+.profile p {
+  color: #666;
+  line-height: 1.6;
+  margin-bottom: 20px;
+  background: #ffeff7;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+footer {
+  background-color: #ffb6c1;
+  color: white;
+  text-align: center;
+  padding: 20px 0;
+  position: relative;
+  bottom: 0;
+  width: 100%;
+}
