--- a/css/login.css
+++ b/css/login.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background-image: url('../image/bg.png'); 
+    background-color: pink; 
     background-size: cover; 
     background-position: center; 
 }
@@ -15,7 +15,7 @@ body {
     border-radius: 5px;
     background-color: rgba(255, 192, 240, 0.439);
     box-shadow: 0px 0px 10px 0px rgba(255, 0, 234, 0.619);
-    color:pink;
+    color: black;
 }
 
 
